--- a/style.css
+++ b/style.css
@@ -33,4 +33,15 @@ img {
     width:150px;
 }
 
+.PrincessPeach {
+    height:200px;
+    width:150px;
+    position:relative;
+}
+
+.CuteCloud {
+    width:200px;
+}
+
+
 
