--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,22 @@ body {
     background-color: skyblue;
     border:"Cupcake border.png"
 }
+
+.grid {
+    height:1000px;
+    width:1000px;
+    border:black 1px;
+    display: flex;
+    flex-wrap:wrap;
+}
+
+.grid div {
+    height:900px;
+    width:900px;
+    background-image:
+    url("https://i.pinimg.com/550x/d3/0e/5a/d30e5aff6181a2e660844f2b0895bd80.jpg")
+}
+
 h1 {
 
 color:rgb(212, 23, 212);
@@ -40,8 +56,17 @@ img {
 }
 
 .CuteCloud {
-    width:200px;
+    width:300px;
+    height:-60px;
+    image-orientation:center;
 }
 
+.grass {
+    height:500px;
+    width:300px;
+    
+    color:forestgreen;
+
+}
 
 
