--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,18 +7,36 @@ body {
 }
 
 .grid {
-    height:1000px;
-    width:1000px;
+    height:200px;
+    width:600px;
     border:black 1px;
     display: flex;
     flex-wrap:wrap;
 }
 
 .grid div {
-    height:900px;
-    width:900px;
-    background-image:
-    url("https://i.pinimg.com/550x/d3/0e/5a/d30e5aff6181a2e660844f2b0895bd80.jpg")
+    height:100px;
+    width:100px;
+    image-orientation: inherit;
+}
+
+.cupcake {
+    background-color:pink;
+    border-radius:50px;
+    border-color:black;
+}
+
+.picture {
+    background-color:pink;
+    border-radius:50px;
+    border-color:black;
+}
+
+
+.blankimage {
+    height:330px;
+    width:100px;
+    background-color:skyblue;
 }
 
 h1 {
@@ -35,6 +53,11 @@ h3 {
     text-align: center;
 }
 
+h4 {
+    color:black;
+    font-size: 16px;
+}
+
 footer {
     background-color: forestgreen;
 }
@@ -49,16 +72,10 @@ img {
     width:150px;
 }
 
-.PrincessPeach {
-    height:200px;
-    width:150px;
-    position:relative;
-}
 
 .CuteCloud {
     width:300px;
-    height:-60px;
-    image-orientation:center;
+    height:200px;
 }
 
 .grass {
