--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body {
 }
 
 .grid {
-    height:200px;
-    width:600px;
+    height:fit-content;
+    width:fit-content;
     border:black 1px;
     display: flex;
     flex-wrap:wrap;
@@ -47,6 +47,10 @@ font-size:40px;
 font-style: italic;
 }
 
+h2 {
+    text-align:center;
+}
+
 h3 {
     background-color:black;
     color:pink;
@@ -79,11 +83,8 @@ img {
 }
 
 .grass {
-    height:500px;
-    width:300px;
-    
     color:forestgreen;
-
+    border-radius:50px;
 }
 
 
