--- a/assets/css/gameStyle.css
+++ b/assets/css/gameStyle.css
@@ -1,6 +1,10 @@
 head {
     text-align:center;
 }
+/* 
+iframe {
+visibility: hidden;
+} */
 
 @keyframes bgcolor {
     0% {
@@ -37,11 +41,10 @@ body {
         animation-direction: alternate;
     }
 
-
 .grid {
     /* flex-wrap: wrap; */
-    width:500px;
-    height:800px;
+    width:300px;
+    height:300px;
 }
 
 @keyframes fadeOut {
@@ -52,8 +55,8 @@ body {
 } 
 
 .grid > div{
-    height:40px;
-    width:40px;
+    height:60px;
+    width:60px;
     background-color:pink;
     border-radius:50px;
     border-color:black;
@@ -84,6 +87,7 @@ h3 {
     background-color:black;
     color:pink;
     text-align: center;
+    font-size:20px;
 
 }
 
