--- a/assets/css/gameStyle.css
+++ b/assets/css/gameStyle.css
@@ -37,26 +37,11 @@ body {
         -webkit-animation-direction: alternate;
         animation-direction: alternate;
     }
-/* 
-    #canvas-wrap { position:relative; width:800px; height:600px}
 
-    #canvas-wrap canvas { position:absolute; top:0; left:0; z-index:0} */
-
-    /* .gameScreen{
-        width:600px;
-        height:700px;
-    } */
-/* 
-    #overlay {
-        position:absolute; 
-        top:20px; 
-        left:30px
-    } */
- 
 .grid {
     flex-wrap: wrap;
     width:1800px;
-    height:200px;
+    height:400px;
 } 
 
 @keyframes fadeOut {
@@ -82,6 +67,15 @@ body {
 
 }
 
+.iframe {
+    size:0.5px;
+}
+
+a {
+    color:black;
+    font-size:100;
+    position:relative;;
+}
 
 h1 {
 
@@ -101,6 +95,8 @@ h3 {
     color:pink;
     text-align: center;
     font-size:20px;
+    top:100px;
+    right:880px;
 
 }
 
