--- a/assets/css/gameStyle.css
+++ b/assets/css/gameStyle.css
@@ -117,11 +117,9 @@ h3 {
     background-color:black;
     color:pink;
     text-align: center;
-    font-size:20px;
+    font-size:15px;
     top:100px;
     right:880px;
-
-
 }
 
 h4 {
@@ -137,7 +135,10 @@ h4 {
 button {
     background-color:black;
     color:hotpink;
+    font-size:20px;
 }
+
+
 
 img {
     height:150px;
@@ -154,9 +155,15 @@ img {
 }
 
 .CuteCloud {
-    width:250px;
-    height:150px;
+    width:150px;
+    height:100px;
     position:relative;
     
 }
 
+table {
+    border-color:gold;
+    border-radius:2px;
+    display: inline-block ;
+    
+}
