--- a/assets/css/indexStyle.css
+++ b/assets/css/indexStyle.css
@@ -5,6 +5,9 @@ head {
 body {
     min-height:100vh;
     background:linear-gradient(to top, rgb(64, 161, 199), rgb(135, 206, 235), white);  
+    margin: 5; height: 50%;  
+    overflow-y: hidden;
+    overflow: hidden;
 }
 
 h1 {
@@ -24,13 +27,15 @@ h1 {
         background-color:black;
         color:pink;
         text-align: center;
-        font-size:20px;
+        font-size:23px;
+        margin-bottom:20px;
     
     }
     
     h4 {
         color:black;
         font-size: 20px;
+        margin-bottom:20px;
     }
     
     footer {
@@ -42,20 +47,42 @@ h1 {
     button {
         background-color:black;
         color:hotpink;
-        font-size:15px;
+        font-size:20px;
+        border-color:pink;
+        border-radius:2px;
+        box-shadow: 4px 4px hotpink;
+        /* height:30px; */
+        margin-right:40px;
+        margin-left:5px;
+        height:40px;
+        margin-bottom:200px;
     }
+
+
+
     
     button:hover {
         transform: scale(0.8);
+        border-color:pink;
+        border-radius:2px;
     }
     
     button:active {
         opacity:0.5;
     }
+    
+
+    img {
+        border-color: hotpink;
+        border-radius: 20px;
+    }
 
     .PeachPresenting {
-        height:300px;
-        width: 200px;
+        height:350px;
+        width: 250px;
+        margin-right:20px;
+       
+    
         
     }
     
