--- a/assets/css/indexStyle.css
+++ b/assets/css/indexStyle.css
@@ -6,8 +6,6 @@ body {
     min-height:100vh;
     background:linear-gradient(to top, rgb(64, 161, 199), rgb(135, 206, 235), white);  
     margin: 5; height: 50%;  
-    /* overflow-y: hidden;
-    overflow: hidden; */
 }
 
 h1 {
@@ -19,7 +17,6 @@ h1 {
     }
     
     h2 {
-        text-align:center;
         font-size:35px;
     }
     
@@ -28,7 +25,8 @@ h1 {
         color:hotpink;
         text-align:center;
         font-size:30px;
-        margin-bottom:130px;
+        margin-bottom:100px;
+        margin-right:40px;
       
     }
     
@@ -38,6 +36,10 @@ h1 {
         margin-bottom:20px;
     }
     
+    h6{
+        margin-left:100px;
+        
+    }
     footer {
         background-color: forestgreen;
         height:20vh;
@@ -51,8 +53,6 @@ h1 {
         border-color:pink;
         border-radius:2px;
         box-shadow: 4px 4px hotpink;
-        /* height:30px; */
-        margin-right:40px;
         margin-left:5px;
         height:40px;
         margin-bottom:200px;
@@ -75,11 +75,12 @@ h1 {
     img {
         border-color: hotpink;
         border-radius: 20px;
+        margin-left:50px;
     }
 
     .PeachPresenting {
-        height:400px;
-        width: 300px;
+        height:450px;
+        width: 350px;
         margin-right:6px;
         
     }
